[gd_scene load_steps=6 format=3 uid="uid://b74obxunqy6f3"]

[ext_resource type="Script" path="res://scripts/comms.gd" id="2_13hxo"]
[ext_resource type="Script" path="res://scripts/dialog.gd" id="2_vcpg4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4sqpf"]

[sub_resource type="BoxMesh" id="BoxMesh_lkhvo"]

[sub_resource type="ButtonGroup" id="ButtonGroup_os8kb"]
resource_name = "Players"

[node name="player" type="RigidBody3D" groups=["player"]]
angular_damp = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_4sqpf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_lkhvo")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 2.33627e-08, -8.42432e-08, 0, 0.96363, 0.267238, 8.74228e-08, 0.267238, -0.96363, 0, 2.126, -4.012)
current = true
far = 100000.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Comms" type="VBoxContainer" parent="UI/VBox"]
layout_mode = 2
script = ExtResource("2_13hxo")

[node name="Player" type="HBoxContainer" parent="UI/VBox/Comms"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/Comms/Player"]
layout_mode = 2

[node name="Input" type="HBoxContainer" parent="UI/VBox/Comms"]
layout_mode = 2

[node name="Button1" type="Button" parent="UI/VBox/Comms/Input"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_os8kb")
text = "Player 1"

[node name="Button2" type="Button" parent="UI/VBox/Comms/Input"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_os8kb")
text = "Player 2"

[node name="Button3" type="Button" parent="UI/VBox/Comms/Input"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_os8kb")
text = "Player 3"

[node name="Chat" type="Label" parent="UI/VBox/Comms/Input"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Output" type="HBoxContainer" parent="UI/VBox/Comms"]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="UI/VBox/Comms/Output"]
layout_mode = 2

[node name="Player1" type="HBoxContainer" parent="UI/VBox/Comms/Output/Players"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/Comms/Output/Players/Player1"]
layout_mode = 2
text = "Player 1: "

[node name="Text" type="Label" parent="UI/VBox/Comms/Output/Players/Player1"]
layout_mode = 2

[node name="Player2" type="HBoxContainer" parent="UI/VBox/Comms/Output/Players"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/Comms/Output/Players/Player2"]
layout_mode = 2
text = "Player 2: "

[node name="Text" type="Label" parent="UI/VBox/Comms/Output/Players/Player2"]
layout_mode = 2

[node name="Player3" type="HBoxContainer" parent="UI/VBox/Comms/Output/Players"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/Comms/Output/Players/Player3"]
layout_mode = 2
text = "Player 3: "

[node name="Text" type="Label" parent="UI/VBox/Comms/Output/Players/Player3"]
layout_mode = 2

[node name="PlanetDialog" type="VBoxContainer" parent="UI/VBox"]
layout_mode = 2
script = ExtResource("2_vcpg4")

[node name="Beacon" type="HBoxContainer" parent="UI/VBox/PlanetDialog"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/PlanetDialog/Beacon"]
layout_mode = 2
text = "Enter Beacon Password: "

[node name="LineEdit" type="LineEdit" parent="UI/VBox/PlanetDialog/Beacon"]
layout_mode = 2

[node name="Button" type="Button" parent="UI/VBox/PlanetDialog/Beacon"]
layout_mode = 2
text = "Submit"

[node name="Information" type="HBoxContainer" parent="UI/VBox/PlanetDialog"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBox/PlanetDialog/Information"]
layout_mode = 2

[node name="Close" type="Button" parent="UI/VBox/PlanetDialog"]
layout_mode = 2
text = "Close"

[connection signal="toggled" from="UI/VBox/Comms/Input/Button1" to="UI/VBox/Comms" method="_on_button_1_toggled"]
[connection signal="toggled" from="UI/VBox/Comms/Input/Button2" to="UI/VBox/Comms" method="_on_button_2_toggled"]
[connection signal="toggled" from="UI/VBox/Comms/Input/Button3" to="UI/VBox/Comms" method="_on_button_3_toggled"]
[connection signal="pressed" from="UI/VBox/PlanetDialog/Close" to="UI/VBox/PlanetDialog" method="_on_close_pressed"]
